# GaussianMixtureModel

./: CMakeLists.txt  gmm.hpp  gmm.tpp  gmm_pybindings.cpp
tests/: CMakeLists.txt  main.cpp
